# plant-virus-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-container.yml
data/: README.txt  demo_R1.fastq  demo_R2.fastq  demo_host_reference.fasta
docs/: DEPLOYMENT.md
envs/: plantvirome.yml
plant_virus_pipeline/: __init__.py  cli.py  pipeline.py  reporting.py  web.py
scripts/: qc_and_trim.sh  remove_host.sh
tests/: test_cli.py  test_reporting.py  test_web.py
