[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plant-virus-pipeline"
version = "0.1.0"
description = "CLI workflow for screening plant sequencing reads for viral content."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Project Contributors" }
]
dependencies = []

[project.scripts]
plant-virus-pipeline = "plant_virus_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["plant_virus_pipeline*"]
